//
//  AccessibilityIdentifiers.swift
//  ImageFeed
//
//  Created by Мамытов Руслан on 16.07.2026.
//

enum AccessibilityIdentifiers {
    static let webViewAccessibilityIdentifier = "UnsplashWebView"
    static let likeButtonIdentifier = "LikeButton"
    static let logoutButtonIdentifier = "LogoutButton"
    static let logoutAlertIdentifier = "LogoutAlert"
    static let logoutAlertYesButtonIdentifier = "YesButton"
}
