...
                                    <constraint firstAttribute="width" constant="60" id="tIE-68-Y73"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npZ-kv-Sbq">
                                <rect key="frame" x="24" y="758" width="366" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="fuY-Ao-1uY"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
...
                                <connections>
                                    <action selector="didTapShareButton" destination="Wb2-jv-B4g" eventType="touchUpInside" id="8w3-bj-FCq"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vts-Sf-OhY" userLabel="Back Button">
                                <rect key="frame" x="8" y="40" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="bM9-Wy-xnO"/>
                                    <constraint firstAttribute="width" constant="24" id="y5d-xM-hhj"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
